Tests/ForLoop.java
public class ForLoop {
  public static void main(String[] args) {
    // for(;;) {
    //!   Math.random()<.05? break : continue; // error: must return value
    // }

    //! for(;;Math.random()<0.5) {   // error: not a statement
    //    System.out.println("true");
    // }

    Math.random();
    //! Math.random()<0.5;   // error: not a statement

  }
}

